--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "description": "",
     "main": "server.js",
     "dependencies": {
+        "cookie-session": "^1.4.0",
         "express": "^4.17.1",
         "mysql2": "^2.1.0",
+        "passport": "^0.4.1",
+        "passport-google-oauth": "^2.0.0",
         "sequelize": "^5.21.5"
     },
     "devDependencies": {},
